[tool.poetry]
name = "Django-CryptographicFields"
version = "2.0.1"
description = "Django App for Cryptography in Django ORM"
authors = ["Shahprogrammer <71475691+Shahprogrammer@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0.0"
pycryptodome = "^3.9.0"


[tool.poetry.dev-dependencies]
Sphinx = "^3.3.1"
twine = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
